title too big mobile fix

--- a/static/less/custom.less
+++ b/static/less/custom.less
@@ -6,7 +6,7 @@
     font-family: "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 
     h1 {
-        font-size: 72px;
+        font-size: 60px;
     }
     h3 {
         font-size: 30px;
